fix: update Next.js to 15.4.10 to fix CVE-2025-66478 security vulnerability

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "clsx": "^2.1.1",
     "groq-sdk": "^0.37.0",
     "lucide-react": "^0.545.0",
-    "next": "15.5.5",
+    "next": "^15.4.10",
     "next-auth": "^5.0.0-beta.29",
     "next-intl": "^4.6.1",
     "openai": "^6.10.0",
@@ -55,7 +55,7 @@
     "dotenv": "^17.2.3",
     "dotenv-cli": "^11.0.0",
     "eslint": "^9",
-    "eslint-config-next": "15.5.5",
+    "eslint-config-next": "^15.4.10",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
